--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -24,11 +24,11 @@
 
         <tr>
             <td>Title</td>
-            <td><input type="text" id="title" name="title"  th:value="${post.title}" /></td>
+            <td><input size="50" type="text" id="title" name="title"  th:value="${post.title}" /></td>
         </tr>
         <tr>
             <td>Content</td>
-            <td><input cols="50" rows="15"  id="body" name="body" th:value="${post.body}"/></td>
+            <td><input size="100"   id="body" name="body" th:value="${post.body}"/></td>
         </tr>
         <tr>
         <td colspan="2" align="center">Author</td>
