--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -18,14 +18,11 @@ body>footer {
 }
 
 #logged-in-info {
+    display: block;
     float: right;
-    margin-top: 18px;
+    margin-top: -20px;
 }
 
-#logged-in-info form {
-    display: inline-block;
-    margin-right: 10px;
-}
 
 body>aside {
     float: right;
