--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,14 @@
 <aside>
     <h2>Recent Posts</h2>
     <a href="#" th:each="p : ${latest5posts}" th:text="${p.title}"
-       th:href="@{/posts/{id}/(id=${p.id})}">Work Begins on HTML5.1</a>
+       th:href="@{/share/{id}/(id=${p.id})}">Work Begins on HTML5.1</a>
+    <br/>
+    <a href="#" th:href="@{viewNext/{page}}">Show next 5 posts</a><br/>
+
+    <br/>
+    <a href="#" th:href="@{viewAllPosts}">All Posts</a><br/>
+    <h2>Search by name</h2>
+<p>TODO</p>
 </aside>
 
 <main id="posts">
