--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -21,16 +21,20 @@
                 <a href="index.html" th:href="@{/}">Home</a>
                 <a href="users/login.html" th:href="@{/users/login}">Login</a>
                 <a href="users/register.html" th:href="@{/users/register}">Register</a>
-                <a href="posts/index.html" th:href="@{/posts}">Posts</a>
+
+
                 <a href="posts/create.html" th:href="@{/posts/create}">Create Post</a>
+
+                <a href="posts/index.html" th:href="@{/posts}">Posts</a>
                 <a href="users/login.html" th:href="@{/users}">Users</a>
 
-            <div id="logged-in-info">
-                <span>Hello, <b>(user)</b></span>
-                <form method="post" th:action="@{/users/logout}">
-                    <input type="submit" value="Logout"/>
+            <span id="logged-in-info">
+                <p th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]! </p>
+                <form  th:action="@{/logout}" method="post">
+                    <input  type="submit" value="Sign Out"/>
                 </form>
-            </div>
+
+            </span>
 
     </header>
 
