--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -40,6 +40,9 @@
             <td>Confirm:</td>
          <td>
              <input type="submit" value="Create" />
+             <input type="hidden"
+                    th:name="${_csrf.parameterName}"
+                    th:value="${_csrf.token}" />
 
          </td>
         </tr>
