--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -46,6 +46,9 @@
             <td>Confirm:</td>
          <td>
              <input type="submit" value="Edit" />
+             <input type="hidden"
+                    th:name="${_csrf.parameterName}"
+                    th:value="${_csrf.token}" />
 
          </td>
         </tr>
