--- a/src/main/resources/templates/users/delete.html
+++ b/src/main/resources/templates/users/delete.html
@@ -44,6 +44,9 @@
             <td>Confirm:</td>
          <td>
              <input type="submit" value="Delete" />
+             <input type="hidden"
+                    th:name="${_csrf.parameterName}"
+                    th:value="${_csrf.token}" />
 
          </td>
         </tr>
