--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -6,8 +6,15 @@
 
 <body>
 <header th:replace="layout :: site-header" />
+
+    <div th:if="${param.error}">
+        Invalid username and password.
+    </div>
+    <div th:if="${param.logout}">
+        You have been logged out.
+    </div>
 <h2>Please login</h2>
-<form method="post" th:object="${loginForm}">
+<form th:action="@{/users/login}" method="post" th:object="${loginForm}">
     <label for="username"> Username:</label>
     <input type="text" id="username" name="username" th:value="*{username}"/>
     <span class="formError" th:if="${#fields.hasErrors('username')}"
@@ -21,6 +28,7 @@
 
     <input type="submit" value="Login" /> <br/>
 </form>
+
 
 <footer th:replace="layout :: site-footer" />
 </body>
