--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -34,6 +34,9 @@
           th:errors="*{passwordConfirm}">Password do not match</span><br/>
 
     <input type="submit" value="Register" /> <br/>
+    <input type="hidden"
+           th:name="${_csrf.parameterName}"
+           th:value="${_csrf.token}" />
 </form>
 
 <footer th:replace="layout :: site-footer" />
