--- a/src/main/resources/templates/posts/viewPostAndCommentAdd.html
+++ b/src/main/resources/templates/posts/viewPostAndCommentAdd.html
@@ -27,13 +27,15 @@
 
     <h3 class="titleComment">Comment:</h3>
     <div class="date" th:each="c : ${comments}">
+        <i>---</i>
+        <strong class="content" th:utext="${c.content}">Post content</strong>
         <i>Commented on</i>
         <span th:text="${#dates.format(c.date, 'dd-MM-yyyy')}">22-May-2016</span>
         <span th:if="${c.author}" th:remove="tag">
-                    <i>by</i> <span th:text="${c.author.fullName != null ?
+                    <i>by</i> <span style="font-style: italic" th:text="${c.author.fullName != null ?
                         c.author.fullName : c.author.username}">Svetlin Nakov</span>
                 </span>
-        <i class="content" th:utext="${c.content}">Post content</i>
+
     </div>
 
     <form method="post" th:object="${commentForm}">
@@ -41,7 +43,7 @@
         <td><input type="text" id="content" name="content" size="50" th:value="*{content}"/></td>
         <span class="formError" th:if="${#fields.hasErrors('content')}"
               th:errors="*{content}">Invalid content</span>
-        <input type="hidden" name="author" th:value="3" />
+        <input type="hidden" name="authorName" th:value="${#httpServletRequest.remoteUser}" />
         <input type="submit" value="Publish comment" />
         <input type="hidden"
                th:name="${_csrf.parameterName}"
