--- a/src/main/resources/templates/share/viewPost.html
+++ b/src/main/resources/templates/share/viewPost.html
@@ -34,13 +34,15 @@
 
     <h3 class="titleComment">Comment:</h3>
     <div class="date" th:each="c : ${comments}">
+        <i>---</i>
+        <strong class="content" th:utext="${c.content}">Post content</strong>
         <i>Commented on</i>
         <span th:text="${#dates.format(c.date, 'dd-MM-yyyy')}">22-May-2016</span>
         <span th:if="${c.author}" th:remove="tag">
                     <i>by</i> <span th:text="${c.author.fullName != null ?
                         c.author.fullName : c.author.username}">Svetlin Nakov</span>
                 </span>
-        <i class="content" th:utext="${c.content}">Post content</i>
+
         <hr/>
 
 
