--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,10 +12,10 @@
     <a href="#" th:each="p : ${latest5posts}" th:text="${p.title}"
        th:href="@{/share/{id}/(id=${p.id})}">Work Begins on HTML5.1</a>
     <br/>
-    <a href="#" th:href="@{viewNext/{page}}">Show next 5 posts</a><br/>
+    <hr/>
+    <a href="#" th:href="@{/share/viewNext/{page}/(page=${page})}">Show next 5 posts</a><br/>
+    <hr/>
 
-    <br/>
-    <a href="#" th:href="@{viewAllPosts}">All Posts</a><br/>
     <h2>Search by name</h2>
 <p>TODO</p>
 </aside>
@@ -35,7 +35,8 @@
                         p.author.fullName : p.author.username}">Svetlin Nakov</span>
                 </span>
         </div>
-        <p class="content" th:utext="${p.body}">Post content</p>
+        <p class="content" th:utext="${p.body}"></p>
+        <a href="#" th:href="@{/share/{id}/(id=${p.id})}">See more ...</a>
     </article>
 </main>
 
