--- a/src/main/resources/templates/share/viewPost.html
+++ b/src/main/resources/templates/share/viewPost.html
@@ -6,14 +6,6 @@
 <body>
 <header th:replace="layout :: site-header" />
 
-<aside>
-    <h2>Recent Posts</h2>
-    <a href="#" th:each="p : ${latest5posts}" th:text="${p.title}"
-       th:href="@{/share/{id}/(id=${p.id})}">Work Begins on HTML5.1</a>
-    <br/>
-    <h2>Search by name</h2>
-</aside>
-
 
 <main id="posts">
 
@@ -28,6 +20,7 @@
         </div>
         <p class="content" th:utext="${post.body}">Post content</p>
     <a href="../posts/viewPostAndCommentAdd.html" th:href="@{/posts/comment/{id}/(id=${post.id})}">Add comment</a>
+    <a href="#" th:href="@{/share/viewNext/{page}/(page=${page})}">Back</a>
 </main>
 
 <main id="comments">
