--- a/src/main/resources/templates/posts/delete.html
+++ b/src/main/resources/templates/posts/delete.html
@@ -9,7 +9,7 @@
 
 <main id="posts">
     <h2>All Posts:</h2>
-    <form method="post">
+    <form method="post" th:object="${postForm}">
     <table>
         <tr>
             <th>Field name</th>
@@ -34,6 +34,7 @@
         <tr>
             <td>Author</td>
             <td th:text="${post.author.fullName != null ? post.author.fullName : post.author.username}"></td>
+            <input type="hidden" id="authorName" name="authorName" th:value="${#httpServletRequest.remoteUser}"  />
         </tr>
         <tr>
             <td>Date</td>
