--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -22,7 +22,7 @@
 
 
     <label for="password"> Password :</label>
-    <input type="text" id="password" name="password" th:value="*{password}"/>
+    <input type="password" id="password" name="password" th:value="*{password}"/>
     <span class="formError" th:if="${#fields.hasErrors('password')}"
           th:errors="*{password}">Invalid password</span><br/>
 
