--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -24,12 +24,12 @@
           th:errors="*{email}">Invalid email</span><br/>
 
     <label for="password"> Password :</label>
-    <input type="text" id="password" name="password" th:value="*{password}"/>
+    <input type="password" id="password" name="password" th:value="*{password}"/>
     <span class="formError" th:if="${#fields.hasErrors('password')}"
           th:errors="*{password}">Invalid password</span><br/>
 
     <label for="passwordConfirm"> Confirm Password :</label>
-    <input type="text" id="passwordConfirm" name="passwordConfirm" th:value="*{passwordConfirm}"/>
+    <input type="password" id="passwordConfirm" name="passwordConfirm" th:value="*{passwordConfirm}"/>
     <span class="formError" th:if="${#fields.hasErrors('passwordConfirm')}"
           th:errors="*{passwordConfirm}">Password do not match</span><br/>
 
